--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light extend">
-        <span class="navbar-brand mb-0 h1">ThinkIT</span>
+        <span class="navbar-brand h1">ThinkIT</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,6 +46,10 @@
             </p>
         </div>
     </div>
+
+    <div class="container"></div>
+
+    <bottom> </bottom>
 </body>
 
 </html>
