--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     </div>
 
     <div class="white-divide"></div>
+
+    <div id="footer">
+        <div id="copyright">
+            <p>Copyright © 2020 Kato Shinya All Rights Reserved.</p>
+        </div>
+    </div>
 </body>
 
 </html>
