--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
 
     <div class="white-divide"></div>
 
+    <div class="gray-divide-2"></div>
+
     <div id="footer">
+        <div id="footer-information"></div>
         <div id="copyright">
             <p>Copyright © 2020 Kato Shinya All Rights Reserved.</p>
         </div>
