--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./src/org/thinkit/githubpages/font/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
     <title>index</title>
 </head>
@@ -48,6 +49,30 @@
     </div>
 
     <div class="white-divide"></div>
+
+    <section class="about me">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="about--text">
+                        <div class="section-title">
+                            <h2>Kato Shinya</h2>
+                            <h1>About me</h1>
+                        </div>
+                        <p>
+                            Japanese freelance developer specializing in the design and production of Java-based web applications and business improvement tools.
+                        </p>
+                        <a href="#" class="primary-btn">CONTACT ME</a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div id="picture-of-me">
+                        <img src="./src/org/thinkit/githubpages/img/about.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <div class="gray-divide-2"></div>
 
