--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
     </nav>
 
+    <div id="pt" class="canvas">
+        <canvas id="canvas" width="2337" height="1909" style="width: 1558px; height: 1273px;"></canvas>
+    </div>
+
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Hello, I'm Kato Shinya.</h1>
@@ -67,7 +71,7 @@
                 </div>
                 <div class="col-md-6">
                     <div id="picture-of-me">
-                        <img src="./src/org/thinkit/githubpages/img/about.png" alt="" />
+                        <img class="rounded-circle shadow-lg" src="./src/org/thinkit/githubpages/img/about.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -82,6 +86,8 @@
             <p>Copyright © 2020 Kato Shinya All Rights Reserved.</p>
         </div>
     </div>
+
+    <script src=".\src\org\thinkit\githubpages\js\stardustCanvas.js"></script>
 </body>
 
 </html>
