--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
+
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/font/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
+
+    <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
+    <script src="./src/org/thinkit/githubpages/js/stardustCanvas.js"></script>
     <title>index</title>
 </head>
 
@@ -42,6 +52,8 @@
             </ul>
         </div>
     </nav>
+
+    <canvas id="canvas" width="2490" height="1909" style="width: 1660px; height: 1273px;"></canvas>
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -87,12 +99,7 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
     <script src="./src/org/thinkit/githubpages/js/index.js"></script>
-    <script src="./src/org/thinkit/githubpages/js/stardustCanvas.js"></script>
 </body>
 
 </html>
