--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
             <p class="lead">
                 This is my portfolio site.
             </p>
-
-            <canvas id="canvas" width="2490" height="1909" style="width: 1660px; height: 1273px;"></canvas>
+            <canvas id="pt" class="canvas" width="2490" height="1909" style="width: 1660px; height: 1273px;"></canvas>
         </div>
     </div>
 
