--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="loader"></div>
     </div>
 
-    <canvas id="pt" class="canvas" width="2490" height="1909" style="width: 1660px; height: 1273px;"></canvas>
+    <canvas id="pt" class="canvas"></canvas>
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <span class="navbar-brand h1">ThinkIT</span>
