--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <div class="loader"></div>
     </div>
 
+    <div id="pt" class="canvas"></div>
+
     <nav class="navbar navbar-expand-lg navbar-light">
         <span class="navbar-brand h1">ThinkIT</span>
         <button class="navbar-toggler" type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation">
