--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <div class="loader"></div>
     </div>
 
-    <div id="pt" class="canvas"></div>
+    <section id="home">
+        <div id="pt" class="canvas"></div>
+    </section>
 
     <nav class="navbar navbar-expand-lg navbar-light">
         <span class="navbar-brand h1">ThinkIT</span>
