--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
     <div id="footer">
         <div id="footer-information"></div>
         <div id="copyright">
-            <p>Copyright © 2020 Kato Shinya All Rights Reserved.</p>
+            <p>
+                <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
+            </p>
         </div>
     </div>
 
