--- a/index.html
+++ b/index.html
@@ -94,7 +94,28 @@
     <div class="gray-divide-2"></div>
 
     <div id="footer">
-        <div id="footer-information"></div>
+        <div id="footer-information">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h6>Social Network</h6>
+                        <div class="contact-divide"></div>
+                        <div class="fab fa-github"></div>
+                        <div class="fab fa-instagram"></div>
+                        <div class="fab fa-twitter"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <h6>Contact</h6>
+                        <div class="contact-divide"></div>
+                        <input placeholder="Email" type="email" name="email" required="" />
+                        <input placeholder="Name" type="text" name="name" required />
+                        <input placeholder="Title" type="text" name="title" />
+                        <textarea placeholder="Your Message" type="text" name="message"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="copyright">
             <p>
                 <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
