--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
     <section id="home">
         <div id="pt" class="canvas"></div>
-
         <nav class="navbar navbar-expand-lg navbar-light">
             <span class="navbar-brand h1">ThinkIT</span>
             <button class="navbar-toggler" type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation">
@@ -69,6 +68,8 @@
 
     <section class="about me">
         <div class="container">
+            <h1>ABOUT</h1>
+            <div class="header-divide-black"></div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="about--text">
@@ -79,7 +80,7 @@
                         <p>
                             Japanese freelance developer specializing in the design and production of Java-based web applications and business improvement tools.
                         </p>
-                        <a href="#" class="primary-btn">CONTACT ME</a>
+                        <a href="#footer" class="primary-btn">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -93,38 +94,44 @@
 
     <div class="gray-divide-2"></div>
 
-    <div id="footer">
+    <section id="footer" name="footer">
         <div id="footer-information">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h6>Social Network</h6>
-                        <div class="contact-divide"></div>
-                        <div class="fab fa-github"></div>
-                        <div class="fab fa-instagram"></div>
-                        <div class="fab fa-twitter"></div>
+                        <h6>Connect With Me</h6>
+                        <div class="header-divide-white"></div>
+                        <a href="https://github.com/myConsciousness">
+                            <div class="fab fa-github"></div>
+                        </a>
+                        <a href="https://instagram.com/thinkit_shinya">
+                            <div class="fab fa-instagram"></div>
+                        </a>
+                        <a href="https://twitter.com/thinkit_shinya">
+                            <div class="fab fa-twitter"></div>
+                        </a>
                     </div>
                     <div class="col-md-6">
                         <h6>Contact</h6>
-                        <div class="contact-divide"></div>
-                        <input placeholder="Email" type="email" name="email" required="" />
-                        <input placeholder="Name" type="text" name="name" required />
-                        <input placeholder="Title" type="text" name="title" />
-                        <textarea placeholder="Your Message" type="text" name="message"></textarea>
+                        <div class="header-divide-white"></div>
+                        <input placeholder="Email " type="email " name="email " required=" " />
+                        <input placeholder="Name " type="text " name="name " required />
+                        <input placeholder="Title " type="text " name="title " />
+                        <textarea placeholder="Your Message " type="text " name="message "></textarea>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="copyright">
+        <div id="copyright ">
             <p>
                 <span class="highlight-turquoise">Copyright © 2020 Kato Shinya All Rights Reserved.</span>
             </p>
         </div>
-    </div>
+    </section>
 
-    <script src="./src/org/thinkit/githubpages/js/index.js"></script>
-    <script src="./src/org/thinkit/githubpages/js/shootingStar.js"></script>
+    <script src="./src/org/thinkit/githubpages/js/index.js "></script>
+    <script src="./src/org/thinkit/githubpages/js/shootingStar.js "></script>
 </body>
 
 </html>
