--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                     <div class="col-md-6">
                         <h6>Connect With Me</h6>
                         <div class="header-divide-white"></div>
-                        <a href="https://github.com/myConsciousness">
+                        <a href="https://github.com/myConsciousness" target="_blank">
                             <div class="fab fa-github"></div>
                         </a>
-                        <a href="https://instagram.com/thinkit_shinya">
+                        <a href="https://instagram.com/thinkit_shinya" target="_blank">
                             <div class="fab fa-instagram"></div>
                         </a>
-                        <a href="https://twitter.com/thinkit_shinya">
+                        <a href="https://twitter.com/thinkit_shinya" target="_blank">
                             <div class="fab fa-twitter"></div>
                         </a>
                     </div>
