--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent ">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="#">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#footer">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +85,7 @@
                 </div>
                 <div class="col-md-6">
                     <div id="picture-of-me">
-                        <img class="rounded-circle shadow-lg" src="./src/org/thinkit/githubpages/img/about.png" alt=" " />
+                        <img class="rounded-circle shadow-lg" src="./src/org/thinkit/githubpages/img/about.png" alt="me" />
                     </div>
                 </div>
             </div>
@@ -114,10 +114,10 @@
                     <div class="col-md-6">
                         <h6>Contact</h6>
                         <div class="header-divide-white"></div>
-                        <input placeholder="Email " type="email " name="email " required=" " />
-                        <input placeholder="Name " type="text " name="name " required />
-                        <input placeholder="Title " type="text " name="title " />
-                        <textarea placeholder="Your Message " type="text " name="message "></textarea>
+                        <input placeholder="Email" type="email" name="email" required />
+                        <input placeholder="Name" type="text" name="name" required />
+                        <input placeholder="Title" type="text" name="title" required />
+                        <textarea placeholder="Your Message" type="text" name="message" required></textarea>
                     </div>
                 </div>
             </div>
