--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         <div class="loader"></div>
     </div>
 
-    <section id="home">
+    <section id="shooting-star">
         <div id="pt" class="canvas"></div>
+    </section>
+
+    <section id="home" name="home">
         <nav class="navbar navbar-expand-lg navbar-light">
             <span class="navbar-brand h1">ThinkIT</span>
             <button class="navbar-toggler" type="button " data-toggle="collapse " data-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation">
@@ -45,9 +48,6 @@
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#footer">Contact</a>
                     </li>
                 </ul>
@@ -55,11 +55,10 @@
         </nav>
 
         <div class="jumbotron jumbotron-fluid"></div>
-
         <div class="white-divide"></div>
     </section>
 
-    <section class="about me">
+    <section id="about" class="about me" name="about">
         <div class="container">
             <h1>ABOUT</h1>
             <div class="header-divide-black"></div>
