--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="about" class="about me" name="about">
         <div class="container">
             <h1>ABOUT</h1>
-            <div class="header-divide-black"></div>
+            <div class="header-divide-black-center"></div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="about--text">
