--- a/index.html
+++ b/index.html
@@ -106,12 +106,23 @@
                         </a>
                     </div>
                     <div class="col-md-6">
-                        <h6>Contact</h6>
+                        <h6>Contact Me</h6>
                         <div class="header-divide-white"></div>
-                        <input placeholder="Email" type="email" name="email" required />
-                        <input placeholder="Name" type="text" name="name" required />
-                        <input placeholder="Title" type="text" name="title" required />
-                        <textarea placeholder="Your Message" type="text" name="message" required></textarea>
+
+                        <div id="contact-form">
+                            <div class="form-group">
+                                <input placeholder="Email Address" type="email" name="email" required />
+                            </div>
+                            <div class="form-group">
+                                <input placeholder="Name" type="text" name="name" required />
+                            </div>
+                            <div class="form-group">
+                                <input placeholder="Title" type="text" name="title" required />
+                            </div>
+                            <div class="form-group">
+                                <textarea placeholder="Your Message" type="text" name="message" rows="6" required></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
