--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
                                 <div class="fab fa-twitter"></div>
                             </a>
                         </div>
+
+                        <div id="my-info" class="mt-5">
+                            <h6>Info</h6>
+                            <div class="header-divide-white"></div>
+
+                            <div class="row">
+                                <div class="col-md-1">
+                                    <div class="far fa-envelope"></div>
+                                </div>
+                                <div class="col-md-11">
+                                    <div class="info-email">Email</div>
+                                    <div class="info-email"><strong>kato.shinya.dev@gmail.com</strong></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <h6>Contact Me</h6>
