--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
                             etc.
                         </p>
-                        <a href="#footer" class="primary-btn">CONTACT ME</a>
+                        <a href="#footer" class="button-color-black">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -118,16 +118,27 @@
                             <div class="header-divide-white"></div>
 
                             <div class="row">
-                                <div class="col-md-1">
+                                <div class="col-md-2">
                                     <div class="far fa-envelope"></div>
                                 </div>
-                                <div class="col-md-11">
-                                    <div class="info-email">Email</div>
-                                    <div class="info-email"><strong>kato.shinya.dev@gmail.com</strong></div>
+                                <div class="col-md-10">
+                                    <div class="contact-info">Email:</div>
+                                    <div class="contact-info"><strong>kato.shinya.dev@gmail.com</strong></div>
+                                </div>
+                            </div>
+
+                            <div class="row mt-3">
+                                <div class="col-md-2">
+                                    <div class="fas fa-mobile-alt"></div>
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="contact-info">Phone:</div>
+                                    <div class="contact-info"><strong>Ask me!</strong></div>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-6">
                         <h6>Contact Me</h6>
                         <div class="header-divide-white"></div>
@@ -142,7 +153,7 @@
                             <div class="form-group">
                                 <textarea placeholder="Write message" class="form-control" id="form-control-textarea" rows="7"></textarea>
                             </div>
-                            <button type="submit" class="btn btn-primary">SEND</button>
+                            <input type="submit" class="button-color-white" value="SEND" />
                         </form>
                     </div>
                 </div>
