--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="form-group">
                                 <textarea placeholder="Write message" class="form-control" id="form-control-textarea" rows="7"></textarea>
                             </div>
-                            <input type="submit" class="button-color-white" value="SEND" />
+                            <input type="submit" class="button-color-white float-right" value="SEND" />
                         </form>
                     </div>
                 </div>
