--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
+    <title>Kato Shinya</title>
+    <meta name="description" content="This is the website of full-stack Web developer Shinya Kato." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="robots" content="noindex,follow" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet" />
@@ -17,7 +21,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
 
     <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
-    <title>index</title>
 </head>
 
 <body>
@@ -123,7 +126,9 @@
                                 </div>
                                 <div class="col-md-10">
                                     <div class="contact-info">Email:</div>
-                                    <div class="contact-info"><strong>kato.shinya.dev@gmail.com</strong></div>
+                                    <address class="contact-info">
+                      <strong>kato.shinya.dev@gmail.com</strong>
+                    </address>
                                 </div>
                             </div>
 
