--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -83,6 +83,45 @@
                     <div id="picture-of-me">
                         <img class="rounded-circle shadow-lg" src="./src/org/thinkit/githubpages/img/about.png" alt="me" />
                         <p class="my-position"><strong>Full-Stack Web Developer</strong></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-md-6">
+                    <div class="skill__bar__item">
+                        <p>Java</p>
+                        <div id="bar1" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="95"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>HTML</p>
+                        <div id="bar2" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="95"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>CSS</p>
+                        <div id="bar3" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="95"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="about--text">
+                        <div class="section-title">
+                            <h2>Skills</h2>
+                            <h1>Experience</h1>
+                        </div>
+                        <p>
+                            I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
+                            etc.
+                        </p>
                     </div>
                 </div>
             </div>
