--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
 
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/font.css" />
     <link rel="stylesheet" href="./src/org/thinkit/githubpages/css/index.css" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
-
-    <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
 </head>
 
 <body>
@@ -100,14 +93,14 @@
                         <p>HTML</p>
                         <div id="bar2" class="barfiller">
                             <span class="tip"></span>
-                            <span class="fill" data-percentage="95"></span>
+                            <span class="fill" data-percentage="70"></span>
                         </div>
                     </div>
                     <div class="skill__bar__item">
                         <p>CSS</p>
                         <div id="bar3" class="barfiller">
                             <span class="tip"></span>
-                            <span class="fill" data-percentage="95"></span>
+                            <span class="fill" data-percentage="85"></span>
                         </div>
                     </div>
                 </div>
@@ -119,89 +112,94 @@
                             <h1>Experience</h1>
                         </div>
                         <p>
-                            I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
-                            etc.
-                        </p>
-                    </div>
-                </div>
+                            I have been involved in the design and development of various web applications and business improvement tools, mainly in Java. The graph on the left is not the whole story of my development, but these are main skills I have.<br
+                            /><strong><a
+                    href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
+                    target="_blank"
+                    >For a more detailed skill set, see here.</a
+                  ></strong
+                >
+              </p>
             </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <div class="gray-divide-2"></div>
 
     <section id="footer" name="footer">
-        <div id="footer-information">
-            <div class="container">
+      <div id="footer-information">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div id="my-repository">
+                <h6>My repository</h6>
+                <div class="header-divide-white"></div>
+
+                <a href="https://github.com/myConsciousness" target="_blank">
+                  <div class="fab fa-github"></div>
+                </a>
+              </div>
+              <div id="my-sns" class="mt-5">
+                <h6>Connect With Me</h6>
+                <div class="header-divide-white"></div>
+
+                <a href="https://instagram.com/thinkit_shinya" target="_blank">
+                  <div class="fab fa-instagram"></div>
+                </a>
+                <a href="https://twitter.com/thinkit_shinya" target="_blank">
+                  <div class="fab fa-twitter"></div>
+                </a>
+              </div>
+
+              <div id="my-info" class="mt-5">
+                <h6>Info</h6>
+                <div class="header-divide-white"></div>
+
                 <div class="row">
-                    <div class="col-md-6">
-                        <div id="my-repository">
-                            <h6>My repository</h6>
-                            <div class="header-divide-white"></div>
-
-                            <a href="https://github.com/myConsciousness" target="_blank">
-                                <div class="fab fa-github"></div>
-                            </a>
-                        </div>
-                        <div id="my-sns" class="mt-5">
-                            <h6>Connect With Me</h6>
-                            <div class="header-divide-white"></div>
-
-                            <a href="https://instagram.com/thinkit_shinya" target="_blank">
-                                <div class="fab fa-instagram"></div>
-                            </a>
-                            <a href="https://twitter.com/thinkit_shinya" target="_blank">
-                                <div class="fab fa-twitter"></div>
-                            </a>
-                        </div>
-
-                        <div id="my-info" class="mt-5">
-                            <h6>Info</h6>
-                            <div class="header-divide-white"></div>
-
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <div class="far fa-envelope"></div>
-                                </div>
-                                <div class="col-md-10">
-                                    <div class="contact-info">Email:</div>
-                                    <address class="contact-info">
+                  <div class="col-md-2">
+                    <div class="far fa-envelope"></div>
+                  </div>
+                  <div class="col-md-10">
+                    <div class="contact-info">Email:</div>
+                    <address class="contact-info">
                       <strong>kato.shinya.dev@gmail.com</strong>
-                    </address>
-                                </div>
-                            </div>
-
-                            <div class="row mt-3">
-                                <div class="col-md-2">
-                                    <div class="fas fa-mobile-alt"></div>
-                                </div>
-                                <div class="col-md-10">
-                                    <div class="contact-info">Phone:</div>
-                                    <div class="contact-info"><strong>Ask me!</strong></div>
-                                </div>
-                            </div>
-                        </div>
+                            </address>
                     </div>
+                </div>
 
-                    <div class="col-md-6">
-                        <h6>Contact Me</h6>
-                        <div class="header-divide-white"></div>
-
-                        <form>
-                            <div class="form-group">
-                                <input placeholder="Your email address" type="email" class="form-control" id="form-control-email" />
-                            </div>
-                            <div class="form-group">
-                                <input placeholder="Title" type="text" class="form-control" id="form-control-title" />
-                            </div>
-                            <div class="form-group">
-                                <textarea placeholder="Write message" class="form-control" id="form-control-textarea" rows="7"></textarea>
-                            </div>
-                            <input type="submit" class="button-color-white float-right" value="SEND" />
-                        </form>
+                <div class="row mt-3">
+                    <div class="col-md-2">
+                        <div class="fas fa-mobile-alt"></div>
+                    </div>
+                    <div class="col-md-10">
+                        <div class="contact-info">Phone:</div>
+                        <div class="contact-info"><strong>Ask me!</strong></div>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="col-md-6">
+            <h6>Contact Me</h6>
+            <div class="header-divide-white"></div>
+
+            <form>
+                <div class="form-group">
+                    <input placeholder="Your email address" type="email" class="form-control" id="form-control-email" />
+                </div>
+                <div class="form-group">
+                    <input placeholder="Title" type="text" class="form-control" id="form-control-title" />
+                </div>
+                <div class="form-group">
+                    <textarea placeholder="Write message" class="form-control" id="form-control-textarea" rows="7"></textarea>
+                </div>
+                <input type="submit" class="button-color-white float-right" value="SEND" />
+            </form>
+        </div>
+        </div>
+        </div>
         </div>
 
         <div id="copyright">
@@ -211,6 +209,13 @@
         </div>
     </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/2.1.11/jquery.mixitup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
+
+    <script src="./src/org/thinkit/githubpages/js/jquery.barfiller.js"></script>
+    <script src="./src/org/thinkit/githubpages/js/pt.min.js"></script>
     <script src="./src/org/thinkit/githubpages/js/index.js"></script>
     <script src="./src/org/thinkit/githubpages/js/shootingStar.js"></script>
 </body>
