--- a/index.html
+++ b/index.html
@@ -83,24 +83,59 @@
             <div class="row mt-5">
                 <div class="col-md-6">
                     <div class="skill__bar__item">
-                        <p>Java</p>
+                        <p>Java (SE 7 ~ SE 14)</p>
                         <div id="bar1" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="95"></span>
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>HTML</p>
+                        <p>HTML5</p>
                         <div id="bar2" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="80"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>CSS3</p>
+                        <div id="bar3" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="70"></span>
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>CSS</p>
-                        <div id="bar3" class="barfiller">
+                        <p>JavaScript (ES6)</p>
+                        <div id="bar4" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="90"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>Python 3.x</p>
+                        <div id="bar5" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="75"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>Struts</p>
+                        <div id="bar6" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="85"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>Spring Boot</p>
+                        <div id="bar7" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="85"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>Bootstrap</p>
+                        <div id="bar8" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="70"></span>
                         </div>
                     </div>
                 </div>
@@ -112,7 +147,7 @@
                             <h1>Experience</h1>
                         </div>
                         <p>
-                            I have been involved in the design and development of various web applications and business improvement tools, mainly in Java. The graph on the left is not the whole story of my development, but these are main skills I have.<br
+                            I have been involved in the design and development of various web applications and business improvement tools, mainly in Java. The skill graph is not the whole story of my development, but these are main skills I have.<br /><br
                             /><strong><a
                     href="https://github.com/myConsciousness/myConsciousness/blob/master/details/MySkills.md"
                     target="_blank"
