--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
                             etc.
                         </p>
-                        <a href="#footer" class="button-color-black">CONTACT ME</a>
+                        <a href="#footer" id="contact-me" class="button-color-black">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-md-6">
