--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="row">
             <div class="col-md-6">
               <div id="my-repository">
-                <h6>My repository</h6>
+                <h6>My Repository</h6>
                 <div class="header-divide-white"></div>
 
                 <a href="https://github.com/myConsciousness" target="_blank">
