--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#footer">Contact</a>
@@ -69,7 +69,7 @@
                             I'm a Back-End Developer who is specialized in designing and creating Java-based web applications and business improvement tools. I have serious passion for readable and clean code, optimization, easy-to-understand data structure, user-friendly UI and
                             etc.
                         </p>
-                        <a href="#footer" id="contact-me" class="button-color-black">CONTACT ME</a>
+                        <a href="#footer" id="contact-me" class="button-color-turquoise">CONTACT ME</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -155,6 +155,57 @@
                   ></strong
                 >
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="white-divide-2"></div>
+    </section>
+
+    <section id="portfolio" class="portfolio" name="portfolio">
+      <div class="container">
+        <h1>PORTFOLIO</h1>
+        <div class="header-divide-black-center"></div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Card image cap" />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up the bulk of the
+                  card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
             </div>
           </div>
         </div>
