--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="row mt-5">
                 <div class="col-md-6">
                     <div class="skill__bar__item">
-                        <p>Java (SE 7 ~ SE 14)</p>
+                        <p>Java 7 ~ 14</p>
                         <div id="bar1" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="95"></span>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>JavaScript (ES6)</p>
+                        <p>JavaScript ES6</p>
                         <div id="bar4" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="90"></span>
