--- a/index.html
+++ b/index.html
@@ -118,22 +118,29 @@
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>Struts</p>
+                        <p>Oracle SQL</p>
                         <div id="bar6" class="barfiller">
                             <span class="tip"></span>
-                            <span class="fill" data-percentage="85"></span>
+                            <span class="fill" data-percentage="80"></span>
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>Spring Boot</p>
+                        <p>Struts</p>
                         <div id="bar7" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="85"></span>
                         </div>
                     </div>
                     <div class="skill__bar__item">
-                        <p>Bootstrap</p>
+                        <p>Spring Boot</p>
                         <div id="bar8" class="barfiller">
+                            <span class="tip"></span>
+                            <span class="fill" data-percentage="85"></span>
+                        </div>
+                    </div>
+                    <div class="skill__bar__item">
+                        <p>Bootstrap</p>
+                        <div id="bar9" class="barfiller">
                             <span class="tip"></span>
                             <span class="fill" data-percentage="70"></span>
                         </div>
@@ -164,9 +171,6 @@
     <section id="portfolio" class="portfolio" name="portfolio">
       <div class="white-divide-2"></div>
       <div class="container">
-        <h1>PORTFOLIO</h1>
-        <div class="header-divide-black-center"></div>
-
         <div class="row">
           <div class="col-md-4">
             <div class="card" style="width: 18rem;">
@@ -213,8 +217,12 @@
 
     <section id="footer" name="footer">
       <div class="gray-divide-2"></div>
+
       <div id="footer-information">
         <div class="container">
+          <h1>CONTACT</h1>
+          <div class="header-divide-black-center"></div>
+
           <div class="row">
             <div class="col-md-6">
               <div id="my-repository">
