--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
 
     <section id="portfolio" class="portfolio" name="portfolio">
       <div class="white-divide-2"></div>
+      <h1>PORTFOLIO</h1>
+      <div class="header-divide-black-center"></div>
+
       <div class="container">
         <div class="row">
           <div class="col-md-4">
